--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,13 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
+<div class="jumbotron">
   <h1>
-    Bienvenue au  {{ title }}!
+    Le jeu   {{ title }}!
   </h1>
+  <div class="devloper">
+    <span> Développé par : </span><br>
+    <span>Abdeldjalil Guendouz</span> <br>
+    <span>Belaid Nasri</span>
+  </div>
 </div>
 <div style="text-align:center">
   <app-grid-tic></app-grid-tic>
